--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,3 +1,5 @@
+@import "swiper/css";
+
 body {
   font-family: sans-serif;
   margin: 0;
@@ -12,4 +14,27 @@ h3 {
 
 p {
   margin: 0;
+}
+
+#filter-slider {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+#filter-slider .swiper-slide {
+  width: max-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.swiper-slide {
+  width: 225px;
 }
