--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -29,6 +29,17 @@ p {
   align-items: center;
 }
 
+#vertical-slider {
+  margin-top: 10px;
+  width: 100%;
+  height: 70%;
+}
+
+#vertical-slider .swiper-slide {
+  height: 100px;
+  width: 100%;
+}
+
 .swiper {
   width: 100%;
   height: 100%;
