--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -3,6 +3,13 @@
 body {
   font-family: sans-serif;
   margin: 0;
+  padding: 0;
+  height: 100vh;
+  overflow: hidden;
+}
+
+#root {
+  height: 100%;
 }
 
 h1,
@@ -12,40 +19,10 @@ h3 {
   padding: 0;
 }
 
+h1 {
+  font-size: 18px;
+}
+
 p {
   margin: 0;
-}
-
-#filter-slider {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
-#filter-slider .swiper-slide {
-  width: max-content;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#vertical-slider {
-  margin-top: 10px;
-  width: 100%;
-  height: 70%;
-}
-
-#vertical-slider .swiper-slide {
-  height: 100px;
-  width: 100%;
-}
-
-.swiper {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
-.swiper-slide {
-  width: 225px;
 }
